--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "vitepress": "^1.5.0"
+    "@mdit-vue/shared": "0.12.1",
+    "sass-embedded": "^1.83.0",
+    "vitepress": "^1.5.0",
+    "vue": "3.4.21"
   }
 }
